
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2017-05-04 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.2.1



2017-05-03 niel
	Mrg: PR 2448, from kaibosh - Update tmux configs for tmux 2.4.
	Fix: NULL value 'predate' in IRCScraper. Closes issue 2449.
2017-05-01 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.7.2.0


2017-04-30 niel
	Add: Logging for IRCScraper's testing for duplicates, to try to determine why it sometimes
		fails to detect them. This also prevents the script from exiting because of the exception.
2017-04-28 niel
	Mrg: dev-ircscraper branch. Changes to IRCScraper class to make it more resilient for those
		suffering error about "missing catalogue".
2017-04-28 DariusIII
	Fix: Properly populate anidb_episodes table
2017-04-20 niel
	Add: Created Predb model for use in IRCScraper. No other code is updated for it yet.
	Fix: Add 'predb' to uninflected list in connections.
	Add: Created Groups model for use in IRCScraper. No other code is updated for it yet.
2017-04-19 niel
	Fix: Make IRCClient an abstract class, as it has an abstract method which was not previously
		marked as such.
2017-04-19 DariusIII
	Add: Per poster categorization of releases, properly categorize and rename SDCLiP releases and
		add FULLTEXT index on predb.filename for better releases matching.
	Mrg: PR 2440, from Nightah - Added extra regexes to match release names for a.b.anime
017-04-14 niel
	Mrg: PR 2438, from Fossil - Speed up getByRssToken function.
	Mrg: PR 2436, from Wally73 - Update simple-expanded.sh
2017-04-13 DariusIII
	Fix: Properly categorize ANiHLS and HAiKU releases as TV > Anime (please run 'php