@@ -129,14 +129,20 @@ class DB extends \PDO
 	private $sqlDeleteQuick = '';
 
 	/**
-	 * @var timezone of the database connection. Usually the same as $tz_server, but can be changed.
+	 * @var Original timezone of the database connection. Usually the same as $tz_server, but may
+	 * be changed during connection process.
 	 */
-	private $timezone;
+	private $tz_original;
 
 	/**
 	 * @var timezone the database is configured to as default.
 	 */
 	private $tz_server;
+
+	/**
+	 * @var timezone of the database connection. Changed during connection to the PHP set timezone.
+	 */
+	private $tz_session;
 
 	/**
 	 * @var string Username to use when connecting to the database server.
@@ -182,7 +188,7 @@ class DB extends \PDO
 			'dbuser'		=> defined('DB_USER') ? DB_USER : '',
 			'log'			=> '',
 			'persist'		=> false,
-			'timezone'		=> '',
+			'timezone'		=> ini_get('date.timezone'),
 		];
 		$defaults['log'] = ($this->cli && !isset($options['log'])) ? new ColorCLI() : null;
 		$options += $defaults;
@@ -1346,24 +1352,22 @@ class DB extends \PDO
 		$this->pdo->setAttribute(\PDO::ATTR_DEFAULT_FETCH_MODE, \PDO::FETCH_ASSOC);
 
 		// Find Database sever's TZ.
-		$result = $this->query('SELECT ');
-
 		$tz = $this->query('SELECT @@global.time_zone as global, @@session.time_zone as session;');
 
 		if (empty($tz)) {
-			throw new \ErrorException("Unable to fetch database's timezone settings.");
+			throw new \ErrorException("Unable to fetch database's tz_session settings.");
 		}
 
-		$this->timezone = $tz['session'];
-
-		if (!empty($options['timezone'])) {
+		// If the current session tz is different to ours, change it.
+		if ($options['timezone'] != $tz['session']) {
 			$result = $this->queryDirect("SET time_zone = '{$options['timezone']}';");
 			if ($result === false) {
-				throw new \ErrorException("Couldn't change session timezone!");
+				throw new \ErrorException("Couldn't change session tz_session!");
 			}
-			$this->timezone = $options['timezone'];
 		}
 
+		$this->tz_session	= $options['timezone'];
+		$this->tz_original	= $tz['session'];
 		$this->tz_server	= $tz['global'];
 		$this->host			= $options['dbhost'];
 		$this->name			= $options['dbname'];
